<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ShoppingCartActivity">
    <TextView
        android:id="@+id/des_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Shopping List"
        android:textColor="#6C25EA"
        android:textSize="48sp"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:layout_below="@+id/des_title">

        <TextView
            android:id="@+id/enter_title_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="Enter Ingredient"
            android:textColor="#6C25EA"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_title_des"
            android:layout_marginTop="10sp"
            android:ems="11"
            android:hint="Ingredient ex. Banana"

            />

        <ImageView
            android:id="@+id/add"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_below="@+id/enter_title_des"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="7sp"
            android:layout_marginBottom="7sp"

            android:layout_toEndOf="@+id/input"
            android:src="@drawable/ic_add_recipe" />

        <EditText
            android:id="@+id/weight_enter"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="169dp"
            android:ems="10"
            android:hint="Weight"
            android:inputType="number"
            android:translationY="-150px" />

    </RelativeLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="1dp"


        android:background="#F1FEFF" />



</RelativeLayout>