<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item android:id="@+id/nav_add_recipe"
            android:icon="@drawable/ic_add_recipe"
            android:title="Add Recipe"/>
        <item android:id="@+id/nav_shopping_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="Shopping Cart"/>

</menu>