...
                    android:textAlignment="viewStart"
                    android:textColor="#673AB7"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#F1FEFF"
                    android:spinnerMode="dropdown" />

            </LinearLayout>
...

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/listView_data"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:background="#F1FEFF"
                    android:choiceMode="multipleChoice"
                    android:dividerHeight="5dp"
...
